# svg-gem

./: .gitignore  README.md  main.py  pyproject.toml
cmd_tools/: resize_texture.py
src/: app.py
src/svg_gem/feature/: agent_interface.py
src/svg_gem/feature/image_visualization/: img_visual_chain.py  img_visual_prompt.py
src/svg_gem/feature/svg/: svg_agent.py  svg_manager.py  svg_prompt.py  svg_type.py
src/svg_gem/model/: ImageModel.py  Image_model.py  general_model.py
src/svg_gem/router/: image_router.py
src/utility/: llm_model.py  utility_func.py
src/utility/langchain_helper/: simple_factory_type.py  simple_prompt_factory.py  simple_prompt_streamer.py
src/utility/websocket/: websocket_manager.py
utility/: image_utility.py
